src/styles.css
:root {
  --clr-primary: #0090ff;
  --gray-50: #fcfcfc;
  --gray-100: #bbbbbb;
  --gray-200: #646464;
  --gray-300: #202020;
  --font-primary: "Space Mono", "Courier New", Courier, monospace;

  --theme-toggler-color: var(--gray-200);
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font-primary);
  line-height: 1.5;
  background-color: #F0F0F0;
  color: var(--gray-300);

  padding-inline: 1.5rem;
}

body[data-theme="dark"] {
  --theme-toggler-color: var(--gray-100);
  background-color: var(--gray-300);
  color: var(--gray-50);
}

ul,
li {
  list-style: none;
}

a,
a:visited,
a:active {
  color: inherit;
  text-decoration: none;
}

button {
  background-color: transparent;
  border: none;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

